New in v0.12.4 (??????????)
---------------------------

Specified socket type as SOCK_STREAM.  (Error reported by Erik
Forsberg.)


New in v0.12.3 (2003/08/08)
---------------------------

Patch by Jeffrey Marshall fixes socket/fifo recognition on Mac OS X
(which apparently has buggy macros).

Patch by Jeffrey Marshall fixes --calculate-average mode, which seems
to have broken recently.

rdiff-backup should now work with python 2.3.  Thanks to Arkadiusz
Miskiewicz for bug reports.

rdiff-backup now builds with and requires librsync 0.9.6.  This
version should be much better than the old one and everyone should
probably upgrade.  Much thanks to Donovan Baarda for all the work that
went into this release.


New in v0.12.2 (2003/07/24)
---------------------------

Patch by Arkadiusz Patyk fixes building with Python 2.3c1.

Restore of archives made by 0.10.x and earlier fixed, although hard
link information is not restored unless it is current in the mirror.
(Bug reported by Jeff Lessem.)

Fixed problem with door files locally when repository is remote.
(Reported by Robert Weber.)


New in v0.12.1 (2003/07/22)
---------------------------

Added --no-change-dir-inc-perms switch, to avoid some weird errors on
FreeBSD, and possibly on Solaris.  Thanks to Troels Arvin for
report.

Fixed bug when regressing destination directory made with
--windows-mode.  Reported by Tucker Sylvestro.

The librsync blocksize is now chosen based on filesize.  This should
make operations on large files faster (in some cases, orders of
magnitude faster).  Thanks to Ty! Boyack for bringing this issue to my
attention.


New in v0.12.0 (2003/06/26)
---------------------------

Fixed (?) bug that caused crash when file changes type from regular
file in middle of download (reported by Ty! Boyack).

Failure to construct regular file in regression/restoration only
causes warning, not fatal error.

Removed --exclude-mirror option.  (Probably no one uses this, and it
adds clutter.)
